--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,8 @@ license = "MIT OR Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+env_logger = "~0.10"
+log = "~0.4"
 network-interface = "~0.1"
+reqwest = { version = "~0.11", default-features = false, features = ["native-tls", "blocking"] }
+serde_json = "~1.0"
