--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ env_logger = "~0.10"
 log = "~0.4"
 network-interface = "~0.1"
 reqwest = { version = "~0.11", default-features = false, features = ["native-tls", "blocking"] }
+serde = { version = "~1.0", features = ["serde_derive"] }
 serde_json = "~1.0"
