--- a/conf/linux/vpn-ip-tracker.service.template
+++ b/conf/linux/vpn-ip-tracker.service.template
@@ -3,7 +3,7 @@ Description=VPN IP Tracker
 After=network-online.target
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
 
 [Service]
 Type=simple
