--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ log = "~0.4"
 network-interface = "~0.1"
 reqwest = { version = "~0.11", default-features = false, features = ["native-tls", "blocking"] }
 serde = { version = "~1.0", features = ["serde_derive"] }
+
+[target.'cfg(windows)'.dependencies]
+windows-service = "~0.5"
