--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ confy = "~0.5"
 directories = "~4.0"
 env_logger = "~0.10"
 log = "~0.4"
-network-interface = "~0.1"
+ifcfg = "~0.1"
 reqwest = { version = "~0.11", default-features = false, features = ["native-tls", "blocking"] }
 serde = { version = "~1.0", features = ["serde_derive"] }
 thiserror = "~1.0"
